--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,6 @@
 .login-container {
-    width: 300px;
+    width: 90%;
+    max-width: 400px;
     margin: 100px auto;
     padding: 20px;
     border: 1px solid #ccc;
