module new employe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
               Employees
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <a mat-list-item routerLink="/employees/list" routerLinkActive="active-link" (click)="sidenav.close()">Employee List</a>
-          <a mat-list-item routerLink="/employees/new" routerLinkActive="active-link" (click)="sidenav.close()">Add New Employee</a>
+          <a mat-list-item routerLink="/employee/list" routerLinkActive="active-link" (click)="sidenav.close()">Employee List</a>
+          <a mat-list-item routerLink="/employee/new" routerLinkActive="active-link" (click)="sidenav.close()">Add New Employee</a>
         </mat-expansion-panel>
       </mat-nav-list>
     </mat-sidenav>
